--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,10 @@ steps:
     publishWebProjects: false
     arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
     zipAfterPublish: true
+
+- task: AzureRmWebAppDeployment@3
+  displayName: 'Deploy  dir1: $(System.ArtifactsDirectory) - dir2: $(Build.ArtifactStagingDirectory)/$(buildConfiguration) '
+  inputs:
+    azureSubscription: '<Azure service connection>'
+    WebAppName: '<Name of web app>'
+    Package: $(System.ArtifactsDirectory)/**/*.zip    
